smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-multiple-lines-comment.smithy
// Syntax error at line 5, column 5: Expected IDENTIFIER but found COMMENT('// Invalid\n') | Model
$version: "2.0"
namespace smithy.example

use // Invalid
smithy.example#Foo
